--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Belajar Git</title>
+		<title>Belajar Git - Branch Fitur 2</title>
 	</head>
 	<body>
 		<h1>TEST BERUBAH 2</h1>
