--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
               Herman
             </td>
           </tr>
+          <tr>
+            <td>
+              6.
+            </td>
+            <td>
+              SAMINA MINA
+            </td>
+          </tr>
+          <tr>
+            <td>
+              7.
+            </td>
+            <td>
+              LOCOMOTIVE
+            </td>
+          </tr>
         </td>
       </table>
     </div>
