--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
               LOCOMOTIVE
             </td>
           </tr>
+          <tr>
+            <td>
+              8.
+            </td>
+            <td>
+              ROBOCOP
+            </td>
+          </tr>
         </td>
       </table>
     </div>
